syntax = "proto3";

package org.project_planton.provider.cloudflare.cloudflared1database.v1;

// CloudflareD1DatabaseStackOutputs captures the outputs after provisioning a Cloudflare D1 database.
message CloudflareD1DatabaseStackOutputs {
  // The unique identifier of the created D1 database.
  string database_id = 1;

  // The name of the database (same as the input name).
  string database_name = 2;

  // The connection string for connecting to the D1 database.
  string connection_string = 3;
}
