syntax = "proto3";

package org.project_planton.provider.atlas.mongodbatlas.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/atlas/mongodbatlas/v1/spec.proto";
import "org/project_planton/provider/atlas/mongodbatlas/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//mongodb-atlas
message MongodbAtlas {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'atlas.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'MongodbAtlas'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  MongodbAtlasSpec spec = 4 [(buf.validate.field).required = true];

  //status
  MongodbAtlasStatus status = 5;
}

//mongodb-atlas status
message MongodbAtlasStatus {
  //stack-outputs
  MongodbAtlasStackOutputs outputs = 1;
}
