syntax = "proto3";

package org.project_planton.provider.atlas.mongodbatlas.v1;

//mongodb-atlas stack outputs
//https://www.pulumi.com/registry/packages/mongodbatlas/api-docs/advancedcluster/
//https://registry.terraform.io/providers/mongodb/mongodbatlas/latest/docs/resources/advanced_cluster#attributes-reference
message MongodbAtlasStackOutputs {
  //The provider-assigned unique ID for the MongoDB Atlas cluster (cluster_id).
  //https://registry.terraform.io/providers/mongodb/mongodbatlas/latest/docs/resources/advanced_cluster#cluster_id
  string id = 1;
  //MongoDB Atlas standard connection string in SRV format (recommended for MongoDB drivers).
  //Format: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>
  //https://registry.terraform.io/providers/mongodb/mongodbatlas/latest/docs/resources/advanced_cluster#connection_strings
  string bootstrap_endpoint = 2;
  //The cluster identifier, same as id field. Used for resource identification and API operations.
  //https://registry.terraform.io/providers/mongodb/mongodbatlas/latest/docs/resources/advanced_cluster#cluster_id
  string crn = 3;
  //MongoDB Atlas standard connection string in legacy format.
  //Format: mongodb://<host1>:<port1>,<host2>:<port2>/<database>
  //https://registry.terraform.io/providers/mongodb/mongodbatlas/latest/docs/resources/advanced_cluster#connection_strings
  string rest_endpoint = 4;
}
